--- a/public/partials/settings.html
+++ b/public/partials/settings.html
@@ -9,8 +9,9 @@
     <div class="text-center">
       <button ng-click="setUrl()" class="button tiny info">Set URL</button>
     </div>
-
-    {{displayText}}
+    <div class="text-center">
+        {{displayText}}
+    </div>
 
   </form>
 </div>
