--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -4,3 +4,41 @@
 @import "variables";
 @import "mixins";
 @import "base";
+
+.editor{
+    text-align: center;
+    color: red;
+    margin: 10px, auto;
+    width: 70%;
+}
+
+.editorAccessor{
+    position: fixed;
+    top:50%;
+    
+}
+
+.odd{
+    background-color: #ECECEC;
+    margin-top: 5px;
+    padding-left: 10px;
+    word-wrap: break-word;
+}
+.odd:hover{background-color: #F3F3F3;}
+.even{
+    background-color: #D9D9D9;
+    margin-top: 5px;
+    padding-left: 10px;
+    word-wrap: break-word;
+}
+.even:hover{background-color: #EBEBEB;}
+.white{
+    background-color: transparent;
+    margin-top: 5px;
+    padding-left: 10px;
+    word-wrap: break-word;
+}
+
+.tw{
+    word-wrap: break-word;
+}
